ecmascript/parser/tests/typescript-errors/tsc/es6/destructuring/destructuringParameterProperties5/input.ts.stderr
error[1187]: A parameter property may not be declared using a binding pattern
 --> $DIR/tests/typescript-errors/tsc/es6/destructuring/destructuringParameterProperties5/input.ts:5:24
  |
5 |     constructor(public [{ x1, x2, x3 }, y, z]: TupleType1) {
  |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

